pre wrap fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,6 +100,12 @@ code, pre {
 	color: #000000;
 }
 
+.page__footer {
+	padding: .5em 1em;
+	border-top: solid 6px var(--clrh2bg);
+	text-align: center;
+}
+
 .tableofcontents {
 	background-color: var(--clrsidebarbg);
 	color: var(--clrsidebartext);
@@ -162,8 +168,7 @@ code, pre {
 	margin: 1em 0;
 	font-size: 1.3em;
 	/* border-radius: 10px; */
-	overflow-x: scroll;
-
+	white-space: pre-wrap;
 }
 
 .tag, .var, .path {
